fix footer alignment

--- a/include/main.css
+++ b/include/main.css
@@ -15,8 +15,7 @@ body {
 footer {
 	position: absolute;
 	bottom: 0;
-	left: 50;
-	right: 50;
+	text-align: center;
 	opacity: 0.8;
 }
 
